samples/_failures_safe/1761421115_d4f9d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9f343f8.c: In function ‘main’:
./samples/SAFE/__tmp_a9f343f8.c:154:18: error: expected ‘;’ at end of input
  154 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_a9f343f8.c:154:13: error: expected declaration or statement at end of input
  154 |             break
      |             ^~~~~
./samples/SAFE/__tmp_a9f343f8.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9f343f8.c:154:13: error: expected declaration or statement at end of input
